rbac-best-practices-114/restrict-automount-sa-token/e2e/good-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  automountServiceAccountToken: false
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  automountServiceAccountToken: false
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-named-sa
spec:
  serviceAccountName: my-service-account
  automountServiceAccountToken: true
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/part-of: policy-reporter
  name: goodpod05-policy-reporter
spec:
  containers:
    - name: busybox
      image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      automountServiceAccountToken: false
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  labels:
    app.kubernetes.io/part-of: policy-reporter
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          automountServiceAccountToken: false
          containers:
          - name: busybox
            image: busybox:1.35
          restartPolicy: OnFailure
