rbac-best-practices-114/restrict-automount-sa-token/e2e/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-automount-sa-token
spec:
  validationActions:
    - Deny
