rbac-best-practices-114/restrict-automount-sa-token/e2e/remediation-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-restrict-automount-sa-token
spec:
  validationFailureAction: Audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
